--- a/Index.html
+++ b/Index.html
@@ -72,10 +72,11 @@
 			</li>
 		</ul>
 		<p><a href="../ups.zip">Скачать технические характеристики авто</a></p>
-		<p><a id="test" href="#"><img src="images/zakaz.jpg" alt="Заказать"></a></p>
+		<p><a id="test" href="#table"><img src="images/zakaz.jpg" alt="Заказать"></a></p>
 		<a href="mailto:lzlzcev@gmail.com">Обратная связть с администратором</a>
 		<hr />
 		
+		<!--Таблица-->
 		<table border="1" width="1000" cellpadding="10">
 			<tr align="center">
 				<th align="left">Выберити комплект услуг</th>
