--- a/page.html
+++ b/page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Вторая страница</title>
 		<a href="index.html" align="center">Вернутся на главную сраницу</a>
 	</head>
